--- a/jsons/translations/Rusyn.properties
+++ b/jsons/translations/Rusyn.properties
@@ -6,14 +6,14 @@
 
 # Buy -> Прикликати
 # Eras -> Епохы
-# Barbarian encampment -> Dungeon
+# Barbarian encampment -> Пудземеля
 # Promotion -> Наданя
 # promotions -> Наданості
 # Promote -> Приділити наданя
 # Pick promotion -> Убрати наданя
-# Free promotion: -> Free skill:
-# Free promotions: -> Free skills:
-# A new barbarian encampment has spawned! -> A new dungeon has registered!
+# Free promotion: -> Наданя задарь:
+# Free promotions: -> Наданості задарь:
+# A new barbarian encampment has spawned! -> Найдено новоє пудземеля
 # Spaceship parts remaining -> Elementalist remaining
 # spaceship parts -> elementalists
 # The Spaceship -> Heavenly Nature
@@ -74,13 +74,13 @@ Elder Tradition =
  # Requires translation!
 Money's Talking = 
  # Requires translation!
-\Sacred Trees =  
+Sacred Trees = Сящені стромы
  # Requires translation!
 Magnate's Prestige = 
  # Requires translation!
 Divine Spark = 
  # Requires translation!
-God-King = 
+God-King = Царь-буг
  # Requires translation!
 Army of the Lord = 
  # Requires translation!
@@ -178,16 +178,16 @@ A beacon on the shore to guide and warn sailor of dangerous rocks. =
 To remind the writers of their knowledge and to pass it to the next generation. = 
 
  # Requires translation!
-Pillar of Learning = 
+Pillar of Learning = Філяр наученя
 
  # Requires translation!
-Sukamerta = 
+Sukamerta = Шукамерта
 
  # Requires translation!
 Military barrack for cavalry units. = 
 
  # Requires translation!
-Cashier Stable = K
+Cashier Stable = 
  # Requires translation!
 Generate cavalry units faster than normal Stable. = 
 
@@ -195,12 +195,12 @@ Generate cavalry units faster than normal Stable. =
 To turn grain into flour using water power. = 
 
  # Requires translation!
-Fertile Catalyst = 
+Fertile Catalyst = Каталізатор уродженя
  # Requires translation!
 Blessing of nature, increase yield from river tiles and bonus faith for every 5 population. = 
 
  # Requires translation!
-Pillar of Life = 
+Pillar of Life = Філяр живута
 
  # Requires translation!
 Dai Palgum = 
@@ -211,20 +211,20 @@ Dai Palgum =
 A place where entertainments were held for public. = 
 
  # Requires translation!
-Arena of Blood = 
+Arena of Blood = Кровляна арена
  # Requires translation!
 An arena where qualification of Tharsara competition were held, sacred event for Drow to prove their self. = 
 
  # Requires translation!
-The Great Colosseum = 
+The Great Colosseum = Великый Колізей
 
  # Requires translation!
-Sacred Dance = 
+Sacred Dance = Сятый танець
  # Requires translation!
 A body strengthening ritual, held once a year. Nobody know who invented it, this ritual has been passed down from generation to generation = 
 
  # Requires translation!
-Brahula = 
+Brahula = Брагула
  # Requires translation!
 'O, let not the pains of death which come upon thee enter into my body.' - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 
 
@@ -232,7 +232,7 @@ Brahula =
 A place for a country's professional soldier, provides shelter, food, training, and medical facilities. = 
 
  # Requires translation!
-Sulong's Training = 
+Sulong's Training = Сулонґовоє тренованя
  # Requires translation!
 A method to control one's emotion and power, created by Raflar Sulong, a beastman, for beastmen. = 
 
@@ -253,26 +253,26 @@ Ceremonial building, yet so strong, which also operated as fortress by the Eldar
 A religious building where the faithful can come together to worship. = 
 
  # Requires translation!
-Hymn House = 
+Hymn House = Гімнова хыжа
  # Requires translation!
 Pious Louvargians built this structure to worship and praise their Goddess. = 
 
  # Requires translation!
-Infernal Gate = 
+Infernal Gate = Інфернальні врата
  # Requires translation!
 The only way to enter and leave hell is through this scary gate. The gate used by Zorgorath to summon his armies from the netherworld. = 
 
  # Requires translation!
-Pillar of Faith = 
+Pillar of Faith = Філяр віры
 
  # Requires translation!
 College = 
 
  # Requires translation!
-'Ndragheta = 
+'Ndragheta = Н'драґета
 
  # Requires translation!
-Kalacha = 
+Kalacha = Калаха
  # Requires translation!
 'A sacred building had been built by the theachers of king Śailendra in the growing kingdom of Śailendra dinasty'  - Kalasan, translated by Santiko = 
 
@@ -337,16 +337,16 @@ Centre of Arcane =
 A place where Hero or people with magical affinity resides and hone their magical skill. = 
 
  # Requires translation!
-Witcher School = 
+Witcher School = Босорканська ошкола
  # Requires translation!
 Research Arcane Magic vs Wizardry = 
  # Requires translation!
-Can be built in all cities = 
+Can be built in all cities = Мож побудовати у вшиткых варошах
  # Requires translation!
 The witcher schools are the organizations which train and equip witchers, the itinerant monster slayers. While schools differ in mindset and details of training, most of them teach equally professional hunters. = 
 
  # Requires translation!
-Library of Grimoire = 
+Library of Grimoire = Бібліотека Гримуару
  # Requires translation!
 'I felt, as never before or since, as if I were stepping onto the rooftop of my being; onto some dimension of consciousness that I'd never visited before.' –Pico Iyer = 
 
@@ -354,7 +354,7 @@ Library of Grimoire =
 A place where exchange or transaction of goods and services held. = 
 
  # Requires translation!
-Posha = 
+Posha = Поша
  # Requires translation!
 The Goans invented high grading, or selective harvesting, of grass, fish, and other water resources for the better of life. = 
 
@@ -370,7 +370,7 @@ Kad'Hall =
 A system for moving water from one location to another location, usually to irrigate crops. = 
 
  # Requires translation!
-Zaghronk = 
+Zaghronk = Заґронк
  # Requires translation!
 A massive, underground chamber filled with mystical energies that accelerate the regeneration of trolls. Besides, the chamber serves as a gathering place for the troll leaders and their followers. = 
 
@@ -386,14 +386,14 @@ She is a Dryad, a living being that resembles the Forest. =
 A workplace where a furnace to melt and shape iron loceted. = 
 
  # Requires translation!
-The Foundry = 
+The Foundry = Одливарня
  # Requires translation!
 Research Theology vs Metal Casting = 
  # Requires translation!
 A place where all knights are trained and are born anew, it is also a hotspot for repentance. = 
 
  # Requires translation!
-Rheog Baddan = 
+Rheog Baddan = Рьеоґ Баддан
  # Requires translation!
 'He got better in the end, but nobody cared much about that'  - Roger Lancelyn Green = 
 
@@ -401,7 +401,7 @@ Rheog Baddan =
 A body of water sheltered by natural or artificial barriers to protect boat and ships. = 
 
  # Requires translation!
-Golden Anchor Statue = 
+Golden Anchor Statue = Статуя золотої котвы
 
  # Requires translation!
 Provides free education either for a noble or for a commoner. = 
@@ -414,51 +414,51 @@ All newly-trained Non-Mounted Land units in this city receive the Qigong promoti
 The school is also teaches about beliefes. = 
 
  # Requires translation!
-Alchemical Society = 
+Alchemical Society = Алхемічна сполочность
  # Requires translation!
-We all loves the story of creating gold from base metal. = 
+We all loves the story of creating gold from base metal. = Вшиткі-сьме заворожені байками за перечиненя жиліза у золото.
 
  # Requires translation!
 A building designed to protect a military force, civilian, and sometimes a civilization's ruler from its enemies. = 
 
  # Requires translation!
-Ancient Citadel = 
+Ancient Citadel = Старинный Град
  # Requires translation!
 A citadel used by Malakar, Saeth's general, to fire Fury. After Saeth's death, the citadel used by Nas to study dark magic, to create its counter. = 
 
  # Requires translation!
-Ulick Myne = 
+Ulick Myne = Улік Майн
 
  # Requires translation!
-Information Market = 
+Information Market = Торговище інформаційов
  # Requires translation!
 Even the most unheard information can be bought here. = 
 
 
  # Requires translation!
-Gulddin's Treasury = 
+Gulddin's Treasury = Ґульддінова Складовня
  # Requires translation!
 This treasury is enough for a luxury life until the end of the next century. = 
 
  # Requires translation!
-Mountain of Loneliness = 
+Mountain of Loneliness = Гора Самоты
  # Requires translation!
 'Our beards will grow till they hang down the cliff to the valley before anything happens here.'  - Dwalin = 
 
  # Requires translation!
-Gemcutter = 
+Gemcutter = Драґомітниця
  # Requires translation!
-A workplace where gem-related luxury created. = 
+A workplace where gem-related luxury created. = Майстерня, де з драґоміту чинят драготкы для пудвыщеня препышности.
 
  # Requires translation!
-Yakhcal = 
+Yakhcal = Якчал
  # Requires translation!
-Clay refrigerator built on Desert. = 
+Clay refrigerator built on Desert. = Велика льодовня из глины, што ся кладе у пустыні.
 
  # Requires translation!
-Public Bath = 
+Public Bath = Варошські купелі
  # Requires translation!
-Release stress together, have fun together. = 
+Release stress together, have fun together. = Лишайте ся стреса уєдно, веселіт ся уєдно.
 
  # Requires translation!
 To keep and maintain weapon during off-duty or peacetime. = 
@@ -601,7 +601,7 @@ Bakery =
 An establishment that produces and sells flour-based food baked in an oven. = 
 
  # Requires translation!
-Knight Academy = 
+Knight Academy = Рыцарська академія
  # Requires translation!
 An institution dedicated to train the art of war including rigorous physical training and courses in command, strategy, logistics and other military subjects. = 
 
@@ -4349,13 +4349,13 @@ into era of greatness =
 #################### Lines from Specialists ####################
 
  # Requires translation!
-Inventor = 
+Inventor = Вынаходник
 
  # Requires translation!
-Farmer = 
+Farmer = Фармер
 
  # Requires translation!
-Alchemist = 
+Alchemist = Алхемик
 
 
 #################### Lines from Speeds ####################
@@ -4402,7 +4402,7 @@ Loans and Saving =
  # Requires translation!
 Enlightenment = 
  # Requires translation!
-Alchemy = 
+Alchemy = Алхемія
 
 
  # Requires translation!
@@ -4678,25 +4678,25 @@ Adamantium =
 Kyber = 
 
  # Requires translation!
-Magician = 
+Magician = Чародій
 
  # Requires translation!
-Philosopher's Stone = 
+Philosopher's Stone = Філозофськый камінь
 
  # Requires translation!
-Dragon's Egg = 
+Dragon's Egg = Яисько Шарканя
 
  # Requires translation!
-Megall = 
+Megall = Превелика потвора
 
  # Requires translation!
-Niter = 
+Niter = Нітор
 
  # Requires translation!
-Rune Stone = 
+Rune Stone = Руничный камінь
 
  # Requires translation!
-Amber = 
+Amber = Янтарь
 
  # Requires translation!
 Coffee = 
@@ -4708,16 +4708,16 @@ Gu =
 Mammoth = 
 
  # Requires translation!
-Jade = 
+Jade = Жад
 
  # Requires translation!
-Obsidian = 
+Obsidian = Обсидіянт
 
  # Requires translation!
-Perfume = 
+Perfume = Порфін
 
  # Requires translation!
-Honey = 
+Honey = Мед
  # Requires translation!
 Honey available when you allied with Crotoa. = 
 
@@ -4728,9 +4728,9 @@ Ivory available when you allied with Frostwaste. =
 Jewelry available when you allied with Concordia. = 
 
  # Requires translation!
-Mithril = 
+Mithril = Міфтріла
  # Requires translation!
-Mithril available when you allied with Gahaldur. = 
+Mithril available when you allied with Gahaldur. = Метал Міфтріла доступный тогды, коли-сьте ся злучили из Ґахальдуром.
 
  # Requires translation!
 Porcelain available when you allied with Tonthon. = 
@@ -4739,17 +4739,17 @@ Porcelain available when you allied with Tonthon. =
 #################### Lines from UnitPromotions ####################
 
  # Requires translation!
-Promotion = Skill
+Promotion = Наданя
  # Requires translation!
-Promotions = Skills
+Promotions = Наданості
  # Requires translation!
-Promote = Acquire skill
+Promote = Дустати наданя
  # Requires translation!
-Pick promotion = Pick skill
+Pick promotion = Приділити наданя
  # Requires translation!
-Free promotion: = Free skill:
+Free promotion: = Наданя задарь:
  # Requires translation!
-Free promotions: = Free skills:
+Free promotions: = Наданості задарь:
  # Requires translation!
 This Unit gains the [promotion] promotion = This Unit gains the [promotion] skill
  # Requires translation!
@@ -4767,29 +4767,29 @@ Mage =
  # Requires translation!
 Construct = 
  # Requires translation!
-Vampire = 
+Vampire = Опірь
  # Requires translation!
-Monk = 
+Monk = Монах
  # Requires translation!
-Tamer = 
+Tamer = Кротитель
  # Requires translation!
 Airship = 
  # Requires translation!
-Air Terror = 
+Air Terror = Воздушный терор
  # Requires translation!
-Water Terror = 
+Water Terror = Водный терор
  # Requires translation!
-Infantry Hero = 
+Infantry Hero = Пішый Вітязь
  # Requires translation!
 Anti-Cav Hero = 
  # Requires translation!
-Cavalry Hero = 
+Cavalry Hero = Конный Вітязь
  # Requires translation!
-Archery Hero = 
+Archery Hero = Лучный Вітязь
  # Requires translation!
-Siege Hero = 
+Siege Hero = Обложный Вітязь
  # Requires translation!
-Evil Hero = 
+Evil Hero = Злый Вітязь
  # Requires translation!
 Mage Hero = 
  # Requires translation!
@@ -4877,7 +4877,7 @@ Battlecry =
 Pet Command = 
 
  # Requires translation!
-Tortoise = 
+Tortoise = Корытниця
 
 
  # Requires translation!
@@ -5603,22 +5603,22 @@ Inflict stronger ranged attack and the only Galleass which can sail through Ocea
 
 
  # Requires translation!
-Armoured Frigate = 
+Armoured Frigate = Панцирьована Фреґата
 
 
  # Requires translation!
-Watcher = 
+Watcher = Стражник
 
  # Requires translation!
-Oracle = 
-
-
- # Requires translation!
-Warlock = 
+Oracle = Оракул
 
 
  # Requires translation!
-Zeppelin = 
+Warlock = Чорнокнижник
+
+
+ # Requires translation!
+Zeppelin = Цепелин
 
  # Requires translation!
 Hybrid Airship = 
@@ -5626,81 +5626,81 @@ Hybrid Airship =
 Typical carrier that can attack. = 
 
  # Requires translation!
-Roc = 
+Roc = Рукх
  # Requires translation!
-An enormous legendary bird of prey in the mythology of the Middle East. Roc is an Air Terror-to-Air Terror combat specialist. = 
+An enormous legendary bird of prey in the mythology of the Middle East. Roc is an Air Terror-to-Air Terror combat specialist. = Леґендарна енормна птиця-драпежник из міфтології Оріента. Рукх вміє ся бити из формованями воздушного терора.
 
  # Requires translation!
 Dragonling Rider = 
  # Requires translation!
-Dragon = 
+Dragon = Шаркань
  # Requires translation!
 A dragon that have not been properly trained to fight. Dragonling still rely on their instinct and cannot aim their fire breath properly. = 
 
  # Requires translation!
-Griffon = 
+Griffon = Ґріфон
  # Requires translation!
 A legendary creature with the body, tail, and back legs of a lion; the head and wings of an eagle; and sometimes an eagle's talons as its front feet. . Griffon is an Air Terror-to-Air Terror combat specialist. = 
 
  # Requires translation!
-Dragon Knight = 
+Dragon Knight = Вітязь на шарканьови
  # Requires translation!
 A dragonoar, a term used to call a person who trains a dragon, who can collaborate properly with his/her dragon either during sparring or fight will be declared a Dragon Knight. A Dragon Knight may perform ranged attacks by utilizing his/her dragon's fire breath. = 
 
  # Requires translation!
-Garuda = 
+Garuda = Ґаруда
  # Requires translation!
 The king of the birds. Garuda is an Air Terror-to-Air Terror combat specialist. = 
 
  # Requires translation!
-Dragon Paladin = 
+Dragon Paladin = Паладин на шарканьови
  # Requires translation!
 Skilled Dragon Knight who has gone through various trials and won many battles, is the highest title for a Dragon Knight. = 
 
  # Requires translation!
-Megalodon = 
+Megalodon = Меґалодонь
  # Requires translation!
-Beast = 
+Beast = Звірь
  # Requires translation!
 One of the largest and most powerful predators to have ever lived, control them means control the sea. = 
 
  # Requires translation!
-Kraken = 
+Kraken = Кракен
  # Requires translation!
 The great man-killing octopus, a legendary sea monster of enormous size. = 
 
  # Requires translation!
-Hydra = 
+Hydra = Гідра
  # Requires translation!
 Also referred to as Lernaean Hydra, is a serpentine water monster in Greek and Roman mythology. While Kraken can only attack Water units, Hydra can attack both Water and Land units. = 
 
  # Requires translation!
-Fury = 
+Fury = Гнівачка
  # Requires translation!
 One-hit-kill attack of Heaven, or Hell. = 
 
  # Requires translation!
-Skeletal Warrior = 
+Skeletal Warrior = Воин-кустяк
  # Requires translation!
 Unbuildable, this unit appears only when Necropoleis founding a city before the Feudal age. = 
 
  # Requires translation!
-Skeletal Champion = 
+Skeletal Champion = Вітязь-кустяк
  # Requires translation!
 Unbuildable, this unit appears only when Necropoleis founding a city starting from the Feudal age. = 
 
  # Requires translation!
-Damphyr = 
+Damphyr = Дамфир
  # Requires translation!
 Damphyr main value is to construct Vampire Castle. = 
 
  # Requires translation!
-Dracula = 
+Dracula = Дракула
  # Requires translation!
 Dracula can heal faster in Coffin and become weak when fighting in Desert. = 
 
  # Requires translation!
-Great Farmer = 
+Great Farmer = Великый Фармер
  # Requires translation!
 If the farmers are the founders of human civilization, than surely great things that a Great farmer will do. = 
  # Requires translation!
@@ -5809,7 +5809,7 @@ Traon General =
 To become Traon General, an Arxian warrior must perform tremendous feats of bravery, daring and martial valor, as well as being ruthless and canny enough to avoid the machinations of his enemies and rivals. = 
 
  # Requires translation!
-Great Admiral = 
+Great Admiral = Великый Адмірал
  # Requires translation!
 Tactical minded sea captains, they provide the leadership necessary to guide powerful navies to victory on the open sea. = 
 
@@ -5822,7 +5822,7 @@ A person making an inquiry, deny, redact, and censor foreign religious activitie
  # Requires translation!
 Prevents spreading of religion to the city it is next to, +10% Strength when adjacent to a Cleric unit = 
  # Requires translation!
-Warrior Monk = 
+Warrior Monk = Воин-монах
  # Requires translation!
 What makes them dangerous isn't their weaponry, but their fanaticism. = 
  # Requires translation!
@@ -5841,31 +5841,31 @@ Shaolin =
 Shaolin move faster than Warrior Monk. = 
 
  # Requires translation!
-Earth Element = 
+Earth Element = Зимняна акціденція
 
  # Requires translation!
-Fire Element = 
+Fire Element = Огняна акціденція
 
  # Requires translation!
-Wood Element = 
+Wood Element = Древляна акціденція
 
  # Requires translation!
-Metal Element = 
+Metal Element = Металічна акціденція
 
  # Requires translation!
-Water Element = 
+Water Element = Водяна акціденція
 
  # Requires translation!
-Slime = 
+Slime = Слимінь
 
  # Requires translation!
-Peuchen = 
+Peuchen = Пихучен
 
  # Requires translation!
-Sandworm = 
+Sandworm = Пісковый червак
 
  # Requires translation!
-Entmates = 
+Entmates = Ент
 
  # Requires translation!
 Jackalope = 
@@ -5874,10 +5874,10 @@ Jackalope =
 Luan = 
 
  # Requires translation!
-Minotaur = 
+Minotaur = Мінотаврос
 
  # Requires translation!
-Pegasus = 
+Pegasus = Пеґаз
 
  # Requires translation!
 Arachne = 
